samples/_failures_safe/1761284924_0afb66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_113852c1.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_113852c1.c:153:5: error: expected expression at end of input
  153 |     } else
      |     ^
./samples/SAFE/__tmp_113852c1.c:153:5: error: expected declaration or statement at end of input
